# mbot_firmware_ros

./: CMakeLists.txt  README.md  available_ros2_types  built_packages
comms/src/: dual_cdc.c  pico_uart_transport.c  usb_descriptors.c
include/config/: mbot_classic_config.h  mbot_classic_default_pid.h  mbot_classic_pid.yaml
libmicroros/include/control_msgs/msg/detail/: dynamic_interface_values__functions.h  dynamic_interface_values__struct.h  dynamic_interface_values__type_support.h  joint_trajectory_controller_state__struct.h  speed_scaling_factor__functions.h  speed_scaling_factor__struct.h  speed_scaling_factor__type_support.h
libmicroros/include/mbot_interfaces/msg/: battery_adc.h  encoders.h  motor_pwm.h  motor_velocity.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  rosidl_typesupport_microxrcedds_c__visibility_control.h
libmicroros/include/mbot_interfaces/msg/detail/: battery_adc__functions.h  battery_adc__rosidl_typesupport_introspection_c.h  battery_adc__rosidl_typesupport_microxrcedds_c.h  battery_adc__struct.h  battery_adc__type_support.h  encoders__functions.h  encoders__rosidl_typesupport_introspection_c.h  encoders__rosidl_typesupport_microxrcedds_c.h  encoders__struct.h  encoders__type_support.h  motor_pwm__functions.h  motor_pwm__rosidl_typesupport_introspection_c.h  motor_pwm__rosidl_typesupport_microxrcedds_c.h  motor_pwm__struct.h  motor_pwm__type_support.h  motor_velocity__functions.h  motor_velocity__rosidl_typesupport_introspection_c.h  motor_velocity__rosidl_typesupport_microxrcedds_c.h  motor_velocity__struct.h  motor_velocity__type_support.h
libmicroros/include/rcl_action/: version.h
libmicroros/include/rcl_lifecycle/: version.h
libmicroros/include/rmw_microxrcedds_c/: config.h
mbot/include/mbot/defs/: mbot_params.h
mbot/include/mbot/utils/: utils.h
mbot/src/imu/: imu.c
mbot/src/motor/: motor.c
mbot/src/utils/: utils.c
microros_static_library/library_generation/: library_generation.sh
microros_static_library/library_generation/extra_packages/: extra_packages.repos
python-tests/: data_analysis.ipynb  drive_square.py  encoder_log_20250607_170458.csv  encoder_log_20250607_185816.csv  encoder_log_no_pid.csv  encoder_log_pid.csv  encoder_logger.py  pwm_test.py  test_wheel_pid.py
scripts/: install_services.sh  mbot-microros-agent.service  ros-mbot.rules
src/: mbot_basic_ros.c  mbot_classic_ros.c  mbot_classic_ros.h  mbot_controller.c  mbot_controller.h  mbot_odometry.c  mbot_odometry.h  mbot_ros_basic_comms.c  mbot_ros_basic_comms.h  mbot_ros_comms.c  mbot_ros_comms.h
tests/: mbot_analog_input_test.c  mbot_calibrate_classic.c  mbot_classic_motor_test.c  mbot_encoder_test.c  mbot_lidar_control.c
